k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  namespace: lazarus-network
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: 560914023379.dkr.ecr.us-east-2.amazonaws.com/lazarus-website
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: lazarus-network
spec:
  type: NodePort
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 80
